# rocket-api

./: .gitignore  Cargo.toml  README.md
benchmarks/: auth.py  routes.py
logs/: api.log.2025-07-21
src/: app.rs  lib.rs  main.rs  telemetry.rs
src/api/: mod.rs
src/api/middleware/: mod.rs
src/api/requests/: auth_reqs.rs  mod.rs  user_reqs.rs
src/api/responses/: user.rs
src/api/routes/: auth.rs  mod.rs  user.rs
src/auth/: jwt.rs  mod.rs  role_middleware.rs  role_traits.rs  roles.rs  service.rs
src/config/: mod.rs  settings.rs
src/core/user/: dto.rs  error.rs  mod.rs  model.rs  repo.rs  service.rs
src/infra/db/: connection.rs  mod.rs  user_repo.rs
