[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
config = "0.15.13"
jsonwebtoken = "9.3.1"
rand_core = "0.9.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
surrealdb = "2.3.7"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
